--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,5 +5,6 @@
   
   <div class="links-container">
     <a href="/memes" class="link-button" data-turbo="false">memes</a>
+    <a href="/meals" class="link-button" data-turbo="false">meal prep</a>
   </div>
 </div> 
