--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'shared/sidebar' %>
+    <main class="main-content">
+      <%= yield %>
+    </main>
   </body>
 </html>
